members bulk delete. (#59)
